--- a/tests/fixtures/hexlet-courses-fixture.html
+++ b/tests/fixtures/hexlet-courses-fixture.html
@@ -4,7 +4,7 @@
         <title>Курсы по программированию Хекслет</title>
     </head>
     <body>
-        <img src="/assets/professions/nodejs.png" alt="Иконка профессии Node.js-программист">
+        <img src="https://cdn2.hexlet.io/store/derivatives/original/588a280155f63d38fff562f0b3ad4e07.png" alt="Иконка профессии Node.js-программист">
         <h3>
             <a href="/professions/nodejs">Node.js-программист</a>
         </h3>
