--- a/tests/fixtures/fixture_for_img.html
+++ b/tests/fixtures/fixture_for_img.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="ru">
     <head>
         <meta charset="utf-8">
@@ -5,8 +6,5 @@
     </head>
     <body>
         <img src="/assets/professions/nodejs.png" alt="Иконка профессии Node.js-программист">
-        <h3>
-            <a href="/professions/nodejs">Node.js-программист</a>
-        </h3>
     </body>
 </html>
